crates/vize_atelier_sfc/src/script/define_props_destructure/snapshots/vize_atelier_sfc__script__define_props_destructure__tests__tests__snapshots__array_methods.snap
---
source: crates/vize_atelier_sfc/src/script/define_props_destructure/tests.rs
assertion_line: 581
expression: result
---
const filtered = __props.items.filter(x => x > 0)
const mapped = __props.items.map(x => x * 2)
const reduced = __props.items.reduce((acc, x) => acc + x, 0)
