crates/vize_atelier_sfc/src/script/define_props_destructure/snapshots/vize_atelier_sfc__script__define_props_destructure__tests__tests__snapshots__basic_usage.snap
---
source: crates/vize_atelier_sfc/src/script/define_props_destructure/tests.rs
assertion_line: 417
expression: result
---
console.log(__props.foo)
