crates/vize_atelier_sfc/src/script/define_props_destructure/snapshots/vize_atelier_sfc__script__define_props_destructure__tests__tests__snapshots__complex_nested_function.snap
---
source: crates/vize_atelier_sfc/src/script/define_props_destructure/tests.rs
assertion_line: 522
expression: result
---
function processData() {
    const result = __props.data.map(item => {
        const inner = __props.config.map(c => c.value)
        return { item, inner }
    })
    return result
}
